--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.styled-table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.styled-table thead tr {
+  background-color: #423f3e;
+  color: #ffffff;
+  text-align: center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.styled-table th,
+.styled-table td {
+  padding: 12px 15px;
+  text-align: left;
+}
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+.styled-table tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+.styled-table tbody tr:last-of-type {
+  border-bottom: 2px solid #423f3e;
+}
+.styled-table tbody tr.active-row {
+  font-weight: bold;
+  color: #423f3e;
+}
+.styled-button {
+  border: none;
+  padding: 7px 14px;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-right: 4px;
+  margin-left: 4px;
+}
+.activeButton {
+  color: white;
+  background-color: #423f3e;
+}
+.inactiveButton {
+  color: black;
+  background-color: white;
+}
+.pagination {
+  padding: 8px 0px;
+  width: 100%;
+  font-weight: 500;
+  text-align: left;
+  font-size: 16px;
+  color: #2c3e50;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  overflow-y: scroll;
 }
-
-.App-link {
-  color: #61dafb;
+.styled-input {
+  width: 30%;
+  padding: 1em;
+  margin: 1em;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 3px #2c3e50;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+img {
+  width: 60px;
+  height: 60px;
+}
+li {
+  list-style-type: none;
+}
+.modal-images {
+  width: 100%;
+  height: 100px;
+  padding: 5px;
 }
